--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "apptastic-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "type": "module",
   "keywords": [],
   "author": "praveenax",
   "license": "ISC",
+  "repository": "praveenax/apptastic-ui",
   "description": "",
   "files": [
     "dist"
