--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/postcss": "^4.1.16",
     "framer-motion": "^12.29.0",
     "fuse.js": "^7.1.0",
+    "gatsby": "^5.16.0",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
